# Tephra

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: main.rs
src/tag/: mod.rs
src/tags/: fs.rs  mod.rs
src/ui/: main.slint
src/ui/main/: main.slint
src/ui/search/: main.slint
